--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
       uses: actions/setup-java@v4
       with:
         java-version: '17'
-        java-distribution: 'temurin'
+        distribution: 'temurin'
         cache: 'maven'
     - name: Install docker
       uses: docker/setup-buildx-action@v3
